upd documentation, did some cleanup